--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,15 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  sonarqube:
+    image: sonarqube:lts-community
+    ports:
+      - "9000:9000"
+    volumes:
+      - sonar_data:/opt/sonarqube/data
+      - sonar_extensions:/opt/sonarqube/extensions
+      - sonar_logs:/opt/sonarqube/logs
+
   cargotracker:
     build: .
     ports:
@@ -33,3 +42,6 @@ services:
 
 volumes:
   postgres-data:
+  sonar_data:
+  sonar_extensions:
+  sonar_logs:
